# lab3

./: CMakeLists.txt  a.out  main.cpp
src/I/IDictionary/include/: IDictionary.hpp
src/I/ISet/include/: ISet.hpp
src/collections/DynamicArray/include/: DynamicArray.hpp
src/collections/HashMap/include/: HashMap.hpp
src/collections/HashTable/include/: HashTable.hpp
src/collections/LinkedList/include/: LinkedList.hpp
src/collections/Sequence/include/: Sequence.hpp
src/core/Histogram/include/: Histogram.hpp
src/core/SparseMatrix/include/: SparseMatrix.hpp
src/core/SparseVector/include/: SparseVector.hpp
src/data/person/include/: person.hpp
src/interface/: CMakeLists.txt
src/interface/include/: interface.hpp
src/interface/src/: interface.cpp
src/tests/: CMakeLists.txt  DynamicArrayTests.cpp  HashMapTests.cpp  HistogramTests.cpp  LinkedListTests.cpp  SparseMatrixTests.cpp  SparseVectorTests.cpp
src/tets/: DynamicArrayTests.cpp  HashMapTests.cpp  HistogramTests.cpp  LinkedListTests.cpp  SparseMatrixTests.cpp  SparseVectorTests.cpp
